[package]
name = "rust-tcp-vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.1", features = ["derive"] }
cty = "0.2.2"

[build-dependencies]
cc = "1.0"
